updated to Java 11 updated Gradle to 6.4.1 added the pitest plugin introduced a minimal coverage level enforced by jacoco bugfix: external sort was losing one line per split file improved some tests due to findings from pitest